publish: prepend www
generated from commit f5ba2958025e993936100b63ee25f3e356c92cad

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 <h1 id='imessages'>iMessages</h1><h2 id='check-for-imessage-compatibility'>Check for iMessage compatibility</h2>
 <p>Check if the given phone number is eligible for iMessages. If it&#39;s not, you can use Twilio to handle it. </p>
 <h3 id='http-request'>HTTP Request</h3>
-<p><code>GET https://usebalto.com/api/is_imessage/&lt;PHONE&gt;</code></p>
+<p><code>GET https://www.usebalto.com/api/is_imessage/&lt;PHONE&gt;</code></p>
 
 <blockquote>
 <p>The endpoint returns JSON as below:</p>
@@ -277,7 +277,7 @@
 <p>Special effects are an iMessage property that can be triggered in two ways.
 1. Automatically when using certain phrases i.e. &quot;Congratulations, Happy Birthday!&quot;</p>
 <h3 id='http-request-2'>HTTP Request</h3>
-<p><code>POST https://usebalto.com/api/send</code></p>
+<p><code>POST https://www.usebalto.com/api/send</code></p>
 <h3 id='headers'>Headers</h3>
 <table><thead>
 <tr>
@@ -317,7 +317,7 @@
 </span></code></pre><h2 id='check-imessage-status'>Check iMessage status</h2>
 <p>iMessages are queued. Use this to check if the message was delivered successfully, read</p>
 <h3 id='http-request-3'>HTTP Request</h3>
-<p><code>GET https://usebalto.com/api/message/&lt;MESSAGE_UUID&gt;</code></p>
+<p><code>GET https://www.usebalto.com/api/message/&lt;MESSAGE_UUID&gt;</code></p>
 
 <table><thead>
 <tr>
