publish: adjust documentation
generated from commit 7910c5ef344f3d30c682e0d97ee3aaba9b26449a

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 </span></code></pre><h2 id='send-an-imessage'>Send an iMessage</h2>
 <p>Use the following request to send an iMessage to the specified number. </p>
 <h4 id='using-special-effects'>Using Special Effects</h4>
-<p>Special effects are an iMessage property that can be triggered via special keywords &quot;Congratulations, Happy Birthday!&quot;</p>
+<p>Special effects are an iMessage property that can be triggered via special keywords  i.e. &quot;Congratulations&quot;,  &quot; Happy Birthday!&quot; etc.</p>
 <h3 id='http-request-2'>HTTP Request</h3>
 <p><code>POST https://www.usebalto.com/api/send</code></p>
 <h3 id='json-body-parameters-2'>JSON Body Parameters</h3>
